header-bar: Loose centering doesn't allocate the whole space to an expanded child.
When expanding the title of a HdyHeaderBar
in loose centering, it should take up the whole available width. This is what GtkHeaderBar
does and what loose centering is for. Instead here it allocates up to the max width while keeping the widget strictly centered.
See this horizontally expanded squeezer as the title widget in a loose-centering HdyHeaderBar
:
With a GtkHeaderBar
it takes the whole width.