header-bar: Stop centering an expanded title when loose

This stops allocating the same extra space on each side of an expanded
title with the loose centering policy, letting a side grow bigger than
the other if more space is available, making it match the behavior of
GtkHeaderBar. The strict centering policy is there to handle other
cases.

Fixes https://gitlab.gnome.org/GNOME/libhandy/-/issues/431